Revision history for Petal.

2.17
    - check that &nbsp; becomes chr(160) not chr(194) (William McKee)
    - Fix bug where \-escaped semicolons were not recognised (William McKee)

2.16 Fri Mar 18 15:30:00 2005
    - Added Cookbook.pod documentation and associated tests from William McKee
    - Removed references to HTML::TreeBuilder and XML::Parser (William McKee)
    - Skip test 071 when URI.pm not installed (William McKee)
    - Added tests 085 & 086 demonstrating breakage when using {disk,mem} cache and multi-language includes
    - $Petal::Hash::String::VARIABLE_RE_BRACKETS no longer treats ${1} as a variable
    - Fix that adds language to the mix when generating cache keys
    - tests 088 & 089 check for correct decode_charset behaviour
    - Fix to allow decode_charset to be other than utf-8 (William McKee)

2.15 Wed Jan  5 15:31:00 2005
    - Fixed some 'used of uninitialized values' warnings
    - Added support for non-alphanumeric xml attribute names in tal:attributes
    - removed defunct email address

2.14 Thu Sep  2 15:07:39 2004
    - Fixed broken I18N attributes parsing
    - Added I18N to string:

2.13 Mon Aug  9 11:32:12 2004
    - Stopped Petal doing I18N stuff for includes
    - Fixed Petal::TranslationService::Gettext wrongly using noop

2.12 Fri Aug  6 13:58:55 2004
    - Added namespace support to Petal::I18N
    - Added Petal::TranslationService::Noop
    - Added Petal::TranslationService::Gettext
    - Revamped Petal::I18N docs
    - Added some I18N tests

2.11 Fri Jul 23 13:10:30 2004
    - Applied Warren Smith's dereferencing patch
    - Fixed broken tests for I18N

2.10 Thu Jul 22 15:12:51 2004
    - Added experimental ZPT I18N support
    - Updated documentation
    - Added a bunch of tests
    - Added a patch to get Petal to resolve SCALAR entities

2.07 Thu Jun 24 13:13:57 2004
    - Added metal:define-slot
    - Added metal:fill-slot

2.06 Fri Jun  4 14:41:58 2004
    - Added HTML Errors mode